Bug 1751790 - Add missing cycle collection for ByteLengthQueuingStrategy size function r=saschanaz

Thanks to evilpie for spotting the omission!

Differential Revision: https://phabricator.services.mozilla.com/D136958